# FastLED

./: CMakeLists.txt
.github/workflows/: esp_upload_component.yaml  espidf.yaml
espidf_component/: CMakeLists.txt  idf_component.yml
espidf_component/hal/v5/: pins_arduino.h
examples/espidf/blink/main/: CMakeLists.txt  idf_component.yml  main.cpp
